--- a/index.html
+++ b/index.html
@@ -20,7 +20,27 @@
   </head>
 
   <body>
-
+    <div>
+      <h1>Tic-Tac-Toe</h1>
+      <table id='gameBoard'>
+        <th></th>
+        <tr id='row0'>
+          <td class="box1"></td>
+          <td class="box2"></td>
+          <td class="box3"></td>
+        </tr>
+        <tr id='row1'>
+          <td class="box1"></td>
+          <td class="box2"></td>
+          <td class="box3"></td>
+        </tr>
+        <tr id='row2'>
+          <td class="box1"></td>
+          <td class="box2"></td>
+          <td class="box3"></td>
+        </tr>
+      </table>
+    </div>
     <script src="code.js"></script>
   </body>
 </html>
