wrote some gameplay code, but winning isn't working

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
   </head>
 
   <body>
-    <div>
+    <div id='gameView'>
       <h1>Tic-Tac-Toe</h1>
       <table id='gameBoard'>
         <th></th>
         <tr id='row0'>
-          <td class="box1"></td>
-          <td class="box2"></td>
-          <td class="box3"></td>
+          <td id="row0 box0"></td>
+          <td id="row0 box1"></td>
+          <td id="row0 box2"></td>
         </tr>
         <tr id='row1'>
-          <td class="box1"></td>
-          <td class="box2"></td>
-          <td class="box3"></td>
+          <td id="row1 box0"></td>
+          <td id="row1 box1"></td>
+          <td id="row1 box2"></td>
         </tr>
         <tr id='row2'>
-          <td class="box1"></td>
-          <td class="box2"></td>
-          <td class="box3"></td>
+          <td id="row2 box0"></td>
+          <td id="row2 box1"></td>
+          <td id="row2 box2"></td>
         </tr>
       </table>
     </div>
