--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id='gameView'>
       <h1>Tic-Tac-Toe</h1>
       <table id='gameBoard'>
-        <th></th>
+        <th id='winMessage'></th>
         <tr id='row0'>
           <td id="row0 box0"></td>
           <td id="row0 box1"></td>
