--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <body>
     <div id='gameView'>
       <h1>Tic-Tac-Toe</h1>
+      <h2 id='turnMarker'></h2>
       <table id='gameBoard'>
-        <th id='winMessage'></th>
         <tr id='row0'>
           <td id="row0 box0"></td>
           <td id="row0 box1"></td>
@@ -40,6 +40,7 @@
           <td id="row2 box2"></td>
         </tr>
       </table>
+      <h1 id='winMessage'></h1>
     </div>
     <script src="code.js"></script>
   </body>
