added areset button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id='gameView'>
       <h1>Tic-Tac-Toe</h1>
       <h2 id='turnMarker'></h2>
+      <button id='resetButton'>Reset</button>
       <table id='gameBoard'>
         <tr id='row0'>
           <td id="row0 box0"></td>
