changed the title of the page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="Kenzie" />
 
     <!-- Title Page-->
-    <title>Tic-Tac-Toe Challenge</title>
+    <title>Tic-Tac-Toe</title>
 
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
